# homescreen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/homescreen_backend/: Cargo.toml
crates/homescreen_backend/src/: config.rs  lib.rs  main.rs  prelude.rs
crates/homescreen_backend/src/routes/: mod.rs  websites.rs
crates/homescreen_data/: Cargo.toml
crates/homescreen_data/src/: lib.rs  prelude.rs  websites.rs
crates/homescreen_errors/: Cargo.toml
crates/homescreen_errors/src/: error.rs  lib.rs  prelude.rs
crates/homescreen_frontend/homescreen_components/: Cargo.toml
crates/homescreen_frontend/homescreen_components/src/: app.rs  header.rs  lib.rs  prelude.rs  quicksites.rs  search.rs  use_interval.rs
crates/homescreen_frontend/homescreen_server/: Cargo.toml
crates/homescreen_frontend/homescreen_server/src/: main.rs
crates/homescreen_frontend/homescreen_server_functions/: Cargo.toml
crates/homescreen_frontend/homescreen_server_functions/src/: functions.rs  lib.rs  prelude.rs
crates/homescreen_frontend/homescreen_webpage/: Cargo.toml  Dioxus.toml
crates/homescreen_frontend/homescreen_webpage/src/: main.rs
crates/homescreen_frontend/homescreen_webpage/static/css/: animations.css  body.css  header.css  main.css  vars.css
