[package]
name = "homescreen_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
poison_wasm = ["dep:sqlx"]

[dependencies]
env_logger = "0.11.3"
homescreen_errors = { version = "0.1.0", path = "../homescreen_errors" }
log = "0.4.21"
serde = { version = "1.0.197", features = ["serde_derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql"], optional = true }
