[package]
name = "homescreen_errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
poison_wasm = ["dep:actix-web"]

[dependencies]
actix-web = { version = "4.5.1", optional = true }
reqwest = "0.12.3"
sqlx = { version = "0.7.4" }
thiserror = "1.0.58"
toml = "0.8.12"

