[package]
name = "homescreen_server_functions"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.1", features = ["fullstack"] }
homescreen_data = { version = "0.1.0", path = "../../homescreen_data" }
homescreen_errors = { version = "0.1.0", path = "../../homescreen_errors" }
reqwest = { version = "0.12.3", features = ["json"] }
