[package]
name = "homescreen_webpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.1", features = ["web", "launch", "fullstack"] }
homescreen_components = { version = "0.1.0", path = "../homescreen_components" }
getrandom = { version = "0.2", features = ["js"] }
dioxus-logger = "0.5.0"
tracing = "0.1.40"
